<resources>
    <string name="app_name">MadLevel3Task1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="txt_start_title">Welcome to the Games Rating app!</string>
    <string name="txt_start">Click START to start rating :)</string>
    <string name="btn_start">START</string>
    <string name="rating_title">Rate the following game from 1 to 5 stars!</string>
    <string name="rating_game">Game</string>
    <string name="rating_btn">To summary</string>
    <string name="start_over">Start over</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>